--- a/src/components/Formforinput.css
+++ b/src/components/Formforinput.css
@@ -22,6 +22,7 @@
     position: absolute;
     top: 100px; 
    
+   
 
 }
 
@@ -40,7 +41,7 @@ header h1{
     width: 340px;
     height: 50px;
   
-    margin: auto;
+   margin-left: 385px;
     margin-top: 25px;
     
 } 
